fix: fetch restaurant
